--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,70 @@
+<link href="https://fonts.googleapis.com/css2?family=Song+Myung&display=swap" rel="stylesheet">
 
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8  offset-lg-2">
+	<div class="container" id="block_container">
+		<div class="row" id="block1">
+			<div class="col-lg-8  offset-lg-2">
 
-			
-            <h2 class="mt-5">CAMERA APP by Hemanth Nag</h2>
-			<form method="post" action="{{ url_for('tasks') }}">
-			<input type="submit" value="Stop/Start" name="stop" />
-			<input type="submit" value="Capture" name="click"/>
-			<input type="submit" value="Grey" name="grey" />
-			<input type="submit" value="Negative" name="neg" />
-			<input type="submit" value="Face Only" name="face" />
-			<input type="submit" value="Start/Stop Recording" name="rec" />
+				<h2 class="mt-5" style="font-family: 'Song Myung', serif;">E로 쓰는 편지</h2>
+				<h4 style="font-family: 'Song Myung', serif;">손으로 쓴 편지를 여기에서 스캔해 주세요</h4>
+				<img src="{{ url_for('video_feed') }}" height="300px">
+
+				<form method="post" action="{{ url_for('tasks') }}" class="buttons">
+					<input type="submit" value="Stop/Start" name="stop" />
+					<input type="submit" value="Capture" name="click" />
+					<input type="submit" value="Grey" name="grey" />
+				</form>
+			</div>
+		</div>
+
+		<div id="block2">
+			<h2>스캔한 정보</h2>
+			<form action="mailto:info@w3docs.com" method="get" enctype="text/plain">
+				<div>
+					<label for="name">수신자:
+						<input type="text" name="name" id="name" />
+					</label>
+				</div>
+				<div>
+					<label for="email"> 제목:
+						<input type="text" name="email" id="email" />
+					</label>
+				</div>
+				<div>
+					<textarea name="comments" rows="12" cols="35">텍스트</textarea>
+				</div>
+				<div>
+					<input type="submit" name="submit" value="Send" />
+				</div>
 			</form>
-            <img src="{{ url_for('video_feed') }}" height="80%">
-			<h3 style="font-family:courier;">Instructions:</h3>
-			<ol style="font-family:courier;">
-			<li>Stop/Start--Toggle between stop or start live streaming</li>
-			<li>Capture--Take still-shot and save in the 'shots' directory</li>
-			<li>Grey--Toggle between grayscale and RGB output</li>
-			<li>Negative--Toggle between negative and RGB output</li>
-			<li>Face Only--Shows just your face if present(Toggle on/off)</li> 
-			<li>Start/Stop Recording--Toggle between starting and stopping video recording</li> </ol>	
-			
-        </div>
-    </div>
-</div>
+		</div>
+
+	</div>
+
+
+
+
 </body>
+
+<style>
+	.mt-5 {
+		font-size: 40px;
+		text-align: center;
+	}
+
+	.buttons {
+		margin-top: 20px;
+	}
+
+	#block_container {
+		align-items: center;
+		display: flex;
+		height: 540px;
+		justify-content: center;
+		width: 100%;
+	}
+
+	#block2 {
+		margin: 100px;
+	}
+</style>
