--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Song+Myung&display=swap" rel="stylesheet">
 
+
 <body>
 	<div class="container" id="block_container">
 
@@ -35,7 +36,8 @@
 						</label>
 					</div>
 					<div>
-						<textarea name="comments" rows="12" cols="35">텍스트</textarea>
+
+						<text name="comments" rows="12" cols="35">{{result}}</text>
 					</div>
 					<div>
 						<input type="submit" name="submit" value="Send" />
